[package]
name = "rutel_derive"
version = "0.4.8"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
