[package]
name = "rutel_derive"
description = "Proc macro derive for rutel"
version = "0.1.1"
authors = ["serbe <serbenv@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/serbe/rutel_derive/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
